<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.integra.tierra.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" >

        <TextView
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:id="@+id/lblEncabezado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inPass"
        android:layout_width="330dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/btnLogin"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp">

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pass"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>



    <Button
        android:layout_centerVertical="true"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/btn_oval"
        android:text="@string/btn_login"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>
