<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.integra.tierra.MenuActivity"
    tools:showIn="@layout/activity_menu">

    <LinearLayout
        android:layout_weight="3.25"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnSOS"
            android:background="@color/colorBtnSOS"
            android:text="@string/btn_sos"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCall"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorBtnCall"
            android:text="@string/btn_call_comp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_weight="3.8"
        android:id="@+id/lblFecha"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ListView
        android:layout_weight="1.5"
        android:id="@+id/lvData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="3.7"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lbl_catego"
            android:textSize="16dp"
            android:id="@+id/lblCatego"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
